// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.v2alpha;

option java_package = "org.wfanet.measurement.reporting.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "MediaTypeProto";

// MediaType is a desgination that applies to Events, EventGroups, and
// ReportingSets, henceforth called artifacts. The MediaType determines
// what EventTempalte applies to an artifact and what MeasurementPolicy
// to apply. An artifact has exactly one MediaType and the type
// CROSS_MEDIA is used when the artifact encompases more that one
// of the other types.
enum MediaType {
  // Default value. Unused.
  MEDIA_TYPE_UNSPECIFIED = 0;
  // The artifact is a mix of MediaTypes
  CROSS_MEDIA = 1;
  // The artifact is categorized as Video
  VIDEO = 2;
  // The artifact is categorized as Display
  DISPLAY = 3;
  // The artifact is categorized as Other
  OTHER = 4;
}
